Spacing fixes

--- a/cardContents/about.css
+++ b/cardContents/about.css
@@ -41,6 +41,7 @@ body {
 }
 
 #description {
+    margin: 2vh 0;
     width: fit-content;
     overflow-y: scroll;
 
